src/objects/Packing_Label_Batch__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Packing Label Batches</relationshipLabel>
        <relationshipName>Packing_Label_Batches1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Record_Type__c</fullName>
        <formula>Subscription__r.Zuora__Account__r.RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_1__c</fullName>
        <label>Address 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_2__c</fullName>
        <label>Address 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_3__c</fullName>
        <label>Address 3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Block__c</fullName>
        <label>Block</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Building_Name__c</fullName>
        <label>Building Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copy_Type__c</fullName>
        <label>Copy Type</label>
        <picklist>
            <picklistValues>
                <fullName>Subscription</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Freelist</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivered_By__c</fullName>
        <formula>Subscription__r.Delivered_By__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Delivered By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Date__c</fullName>
        <label>Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Flight_Number_1__c</fullName>
        <label>Flight Number 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flight_Number_2__c</fullName>
        <label>Flight Number 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flight_Number_3__c</fullName>
        <label>Flight Number 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Issue_Date__c</fullName>
        <label>Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Agent_Account_Number__c</fullName>
        <label>Mailing Agent Account Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Copies__c</fullName>
        <label>Number of Copies</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>POSTCODE__c</fullName>
        <description>Postal code</description>
        <label>POSTCODE</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <label>Product Family</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Sub_Type__c</fullName>
        <formula>Subscription__r.Main_Package_Product_Sub_Type_Mapping__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Sub Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Publication_Code__c</fullName>
        <label>Publication Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipient_Name__c</fullName>
        <label>Recipient Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipient_Number__c</fullName>
        <label>Recipient Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipient_Type__c</fullName>
        <label>Recipient Type</label>
        <picklist>
            <picklistValues>
                <fullName>Overseas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Airline</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Record_Type__c</fullName>
        <label>Record Type</label>
        <picklist>
            <picklistValues>
                <fullName>Overseas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ST_NAME__c</fullName>
        <description>Street Name</description>
        <label>ST NAME</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salutation__c</fullName>
        <label>Salutation</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscriber_Account_Name__c</fullName>
        <label>Subscriber Account Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscriber_Account_Number__c</fullName>
        <label>Subscriber Account Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscription_Product_Charge__c</fullName>
        <label>Subscription Product Charge</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Subscription_Type__c</fullName>
        <label>Subscription Type</label>
        <picklist>
            <picklistValues>
                <fullName>Newspaper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Magazine</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Subscription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subscription</label>
        <referenceTo>Zuora__Subscription__c</referenceTo>
        <relationshipLabel>Packing Label Batches</relationshipLabel>
        <relationshipName>Packing_Label_Batches1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Test_LookUp__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Test LookUp</label>
        <referenceTo>Publication__c</referenceTo>
        <relationshipLabel>TestLookUp</relationshipLabel>
        <relationshipName>Packing_Label_Batches_2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Unit__c</fullName>
        <label>Unit</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Packing Label Batch</label>
    <nameField>
        <displayFormat>PLB{0000000}</displayFormat>
        <label>Packing Label Batch 2 Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Packing Label Batches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>